refactor(platform): let adapters declare their full listener set
 Move listener registration ownership into PlatformAdapter so each
 deliverable explicitly registers the core listeners it keeps and the
 platform-specific replacements it needs.

 This removes the growing shouldHandle...Event gating pattern, keeps
 deprecated legacy events out of Paper/Folia entirely, and makes the
 registration model easier to extend without adding more platform checks
 to authme-core.